package edu.uees.tutorias.domain;

/**
 * Tipo de tutoría utilizado por Strategy para seleccionar
 * la política de cancelación sin llenar el servicio de condicionales.
 */
public enum TipoTutoria {
    NORMAL,
    PRIORITARIA,
    GRUPAL
}
