package edu.uees.tutorias.observer;

public enum TipoEventoReserva {
    CREADA,
    CONFIRMADA,
    CANCELADA,
    REPROGRAMADA
}
